# backend-stealf

./: .claude.json  .dockerignore  .env  .env.example  .gitignore  API_DOCUMENTATION.md  Anchor.toml  Arcium.toml  CHANGES_SUMMARY.md  CLAUDE.md  Cargo.toml  DVtn6yQ9KJSUhMYXSXSRYycirec1hHLP8LPit7b6juUe.json  Dockerfile  IMPLEMENTATION_COMPLETE.md  PRIVACY_CASH.md  PRIVACY_CASH_INTEGRATION.md  QUICK_START_ARCIUM.md  README.md  SHIELDED_TRANSACTIONS_GUIDE.md  UMBRA_CONFIG.md  UMBRA_STATUS.md  VERIFICATION_CHECKLIST.md  check_clusters.ts  docker-compose.yml  example.env  investigate-cluster-mxe.ts  package-lock.json  package.json  test-connectivity.js  test-connectivity.ts  test-simple-umbra.js  test-simple-umbra.ts  test-umbra-flow.js  test-umbra-flow.ts  test-umbra-sdk-only.js  test-umbra-sdk-only.ts  test_2wallets_devnet.ts  test_devnet_direct.ts  test_devnet_wrap.sh  test_pda_debug.ts  (+3 more)
.claude/: audit-security.md  pipeline.md
api/: faucett.json  package-lock.json  package.json  tsconfig.json
api/private/programs/private/: Cargo.toml
api/private/programs/private/src/: commitment.rs  denomination.rs  lib.rs
arcium-private-transfer/: Anchor.toml  Arcium.toml  Cargo.toml  DEPLOYMENT.md  fresh-program-kp.json
arcium-private-transfer/programs/private-transfer/: Cargo.toml
arcium-private-transfer/programs/private-transfer/src/: getrandom_stub.rs  lib.rs
artifacts/: circuits_hash.txt
build 6/: circuits.pre_profile.js  decrypt_pda_address.arcis.ir  decrypt_pda_address.idarc  decrypt_pda_address.ts  encrypt_pda_address.arcis.ir  encrypt_pda_address.idarc  encrypt_pda_address.ts
cache/: encrypted_outputs9fhQBbFpRVZrZ7zAigWG4mGMirCJMibxedQ4DmMcQCo3p94nwF  tradeHistory9fhQBbFpRVZrZ7zAigWG4mGMirCJMibxedQ4DmMcQCo3p94nwF
circuits/: private_transfer_offchain_testnet.arcis
docs/: architecture.md  backend-integration.md  decisions.md  guide-init-and-getbalance.md  security-audit.md
private/: .gitignore  (+13 more)
private-link/: Arcium.toml  Cargo.toml  README.md  package-lock.json  package.json
private-transfers/: Anchor.toml  Arcium.toml  PROOF_INVISIBLE_AMOUNTS.txt  package-lock.json  (+1 more)
private/programs/private/: Cargo.toml
private/programs/private/src/: lib.rs
(+534 files in other folders)
