[package]
name = "arcium-private-transfer"
version = "0.1.0"
description = "Arcium-powered encrypted private transfers on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arcium_private_transfer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
arcium-anchor = "0.4.0"
arcium-client = { version = "0.4.0", default-features = false, features = [] }
